--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,7 @@
         display: flex;
         flex-direction: column;
         min-height: 100vh;
+        background-image: linear-gradient(45deg, #EEEEEE, #FFF, #EEEEEE);
     }
     li {
         @apply px-3;
