--- a/src/components/home.css
+++ b/src/components/home.css
@@ -55,11 +55,13 @@
   top: 20%;
   left: 10%;
   z-index: 10;
+  display: flex;
+  align-content: center;
 }
 .butterfly img {
   width: 100%;
   height: 100%;
-}
+} 
 
 .squares {
   position: relative;
@@ -171,8 +173,8 @@ option {
   font-size: 16px;
 }
 .container__right {
-  width: 200px;
-  height: 120px;
+  width: 100%;
+  height: 20rem;
   padding: 0;
 }
 .butterfly img{
